2000-03-27  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

        * infcmd.c (_initialize_infcmd):  Add `info r' alias for
        `info registers'.

2000-04-13  Nick Duffek  <nsd@cygnus.com>

	* sol-thread.c (init_sol_core_ops): Initialize to_thread_alive
	and document to_find_new_threads bug.

Wed Apr 19 17:03:07 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From Philippe De Muyter <phdm@macqel.be>:
	* bcache.c (free_bcache): Do not free NULL.

Wed Apr 19 16:37:47 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Cleanup.
	* NEWS: Update GDB version.  Duplicate paragraph explaining
 	obsolete.

Wed Apr 19 13:06:55 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (distclean): Delete tui/Makefile.
	* TODO: Add deletion of tui/Makefile.in to list.
	
2000-04-16  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/config.sed: Fix the lines which edit clean: and
        uninstall-info: targets.

2000-04-13  Mark Kettenis  <kettenis@gnu.org>

	* acconfig.h (HAVE_PRGREGSET_T, HAVE_PRFPREGSET_T, HAVE_LWPID_T,
	HAVE_PSADDR_T): Add them here instead of in config.in.

	* acconfig.h (PRFPREGSET_T_BROKEN): New define.
	* configure.in: Add check for broken prfpregset_t type.
	* lin-thread.c (gdb_prfpregset): New typedef, depends on
	definition of PRFPREGSET_T_BROKEN.
	(ps_lgetfpregs, ps_lsetfpregs, p_td_thr_getfpregs,
	p_td_thr_setfpregs, thread_db_fetch_registers,
	thread_db_store_registers): Use gdb_prfpregset_t instead of
	prfpregset_t.
	* config.in: Regenerated.
	* configure: Regenerated.

Fri Apr 14 09:59:15 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Update.

2000-04-13  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* config/i386/nm-i386sol2.h (CANNOT_STEP_HW_WATCHPOINTS):  Define.
	* config/i386/tm-i386sol2.h (HAVE_I387_REGS):  Define.
	* i386v4-nat.c (supply_fpregset, fill_fpregset):  Add code
	to handle floating point registers if NUM_FREGS is not zero.

2000-04-13  Eli Zaretskii  <eliz@is.elta.co.il>
